--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
   <link href="https://api.tiles.mapbox.com/mapbox-gl-is/v1.4.1/mapbox-gl.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-is/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.css" type="text/css" />
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css" rel="stylesheet"/>
+  <link
+    href="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css"
+    rel="stylesheet"
+  />
   <!-- add to homescreen for ios -->
 
   <!-- add to homescreen for ios-->
